Cart redesign almost complete, however mobile layout still needs to be refined. Also z-index of header and footer increased to prevent other elements displaying on top of them (esp during animations)

--- a/styles/basestyle.css
+++ b/styles/basestyle.css
@@ -14,6 +14,7 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
+    z-index: 3;
 }
 
 nav {
@@ -40,6 +41,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 3;
 }
 
 button {
